# bump-version

./: .git-mit.toml  .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  cog.toml  versioned-files.yml
.github/: dependabot.yml  mergify.yml
.github/workflows/: pipeline.yml  run-tests.yml  test-actions.yml
docs/: errors.md  update.md
github-actions/setup-versioned-files/: action.yml
github-actions/versioned-files/: action.yml
src/: app_state.rs  command.rs  config.rs  main.rs  update_event.rs
src/commands/update/: command.rs  event.rs  lifecycle.rs  mod.rs  state.rs  updater.rs
src/formatter/: mod.rs  plain.rs  trait.rs
src/location_types/: mod.rs
src/location_types/cargo/: location.rs  mod.rs
src/location_types/string_pattern/: config.rs  location.rs  mod.rs  pattern.rs  substitute_pattern.rs  update_file.rs
tests/: specdown_test.rs
