[package]
name = "versioned-files"
version = "0.1.0"
edition = "2021"
description = "A tool which updates files in your project with the current version number."
license-file = "LICENSE"
repository = "https://github.com/tomphp/versioned-files"
keywords = ["build", "release", "versioning", "automation"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.12"
