[package]
name = "versioned-files"
version = "0.4.4"
edition = "2021"
description = "A tool which updates files in your project with the current version number."
license-file = "LICENSE"
repository = "https://github.com/tomphp/versioned-files"
keywords = ["build", "release", "versioning", "automation"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
serde_yaml = "0.9.25"
serde = { version = "1.0.189", features = ["derive"] }
anyhow = "1.0.75"
regex = "1.10.2"
tokio = { version = "1.33.0", features = ["full"] }
async-stream = "0.3.5"
futures = "0.3.28"
uuid = { version = "1.5.0", features = ["v4", "fast-rng"] }

[dev-dependencies]
assert_cmd = "2.0.12"
tempfile = "3.8.0"
